support button complete

--- a/index.html
+++ b/index.html
@@ -196,5 +196,8 @@
             </div>
         </section>
     </footer>
+    <div class="support_button_container">
+        <button class="support_button">?</button>
+    </div>
 </body>
 </html>
