clases de secciones generalizadas, eliminacion de codigo repetido

--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
         </div>
     </header>
     <main>
-        <section class="introduction_section">
+        <section class="introduction_section main_sections">
             <h2 class="introduction_title">Your website, email marketing, and products. All under one roof</h2>
             <div class="text_container_phone">
                 <p class="introduction_subtitle">Thousands of people like you use Podia to bring their entire business into a single platform. Podia is free. And as you grow, it has all the tools you’ll need to keep growing.</p>
             </div>
             <button class="free_account main_button">Get your free account</button>
         </section>
-        <section class="statistics">
+        <section class="statistics main_sections">
             <img src="images/icons/stadistics_phone.svg" alt="statistic">
         </section>
-        <section class="ad_website">
+        <section class="ad_website main_sections">
             <img class="example_img" src="images/builder-hero.png" alt="builder-hero">
             <div class="text_container_phone">
                 <h2 class="ad-tittle info_title">Give your website, email marketing, and products a clean, professional look that’s easy to build yourself.</h2>
@@ -59,7 +59,7 @@
                 <button class="see-more">See more →</button>
             </div>
         </section>
-        <section class="email_marketing">
+        <section class="email_marketing main_sections">
             <img class="example_img" src="images/marketing.png" alt="builder-hero">
             <div class="text_container_phone">
                 <p class="little_title">EMAIL MARKETING</p>
@@ -79,7 +79,7 @@
                 <button class="see-more">See more →</button>
             </div>
         </section>
-        <section class="digital_products">
+        <section class="digital_products main_sections">
             <img class="example_img" src="images/digital_products.png" alt="builder-hero">
             <div class="text_container_phone">
                 <p class="little_title">DIGITAL PRODUCTS</p>
@@ -102,7 +102,7 @@
                 <button class="see-more">See more →</button>
             </div>
         </section>
-        <section class="blogging">
+        <section class="blogging main_sections">
             <img class="example_img" src="images/blogging.jpg" alt="builder-hero">
             <div class="text_container_phone">
                 <p class="little_title">BLOGGING</p>
@@ -122,7 +122,7 @@
                 <button class="see-more">See more →</button>
             </div>
         </section>
-        <section class="comments">
+        <section class="comments main_sections">
             <div class="comments_container">
                 <img class="example_img client_img" src="images/client_comment.jfif" alt="comment">
                 <div class="client_comment">
@@ -135,7 +135,7 @@
                 </div>
             </div>
         </section>
-        <section class="support">
+        <section class="support main_sections">
             <div class="text_container_phone">
                 <h2 class="info_title">Friendly support, 7 days a week. Whenever you need help, it’s here for you.</h2>
                 <p class="info_description">Sometimes the fastest way to get answers is to ask someone. Podia has hundreds of articles and resources, a support team that’s available 7 days a week, and a community of thousands of creators like you to ask for help.</p>
