solve problem with menu and login button

--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
             <div>
                 <img class="logo" src="images/podia-logo.png" alt="podia_logo">
             </div>
-            <div>
+            <div class="settings_container">
                 <p class="main_setting login">Login</p>
-            </div>
-            <div class="container_menu">
                 <p class="main_setting menu">Menu</p><div><img class="row_menu" src="images/icons/flecha_abajo.svg" alt="row"></div>
             </div>
         </div>
