solved the problem of buttons

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img class="logo" src="images/podia-logo.png" alt="podia_logo">
             </div>
             <div class="settings_container">
-                <p class="main_setting login">Login</p>
+                <p class="main_setting login"><a href="#">Login</a></p>
                 <p class="main_setting menu">Menu</p><div><img class="row_menu" src="images/icons/flecha_abajo.svg" alt="row"></div>
             </div>
         </div>
@@ -28,7 +28,7 @@
             <div class="text_container_phone">
                 <p class="introduction_subtitle">Thousands of people like you use Podia to bring their entire business into a single platform. Podia is free. And as you grow, it has all the tools you’ll need to keep growing.</p>
             </div>
-            <button class="free_account main_button">Get your free account</button>
+            <button class="free_account main_button"><a href="#">Get your free account</a></button>
         </section>
         <section class="statistics main_sections">
             <img src="images/icons/stadistics_phone.svg" alt="statistic">
@@ -54,7 +54,8 @@
                         <button>Make your website feel like you<img src="images/icons/plus.svg" alt="plus"></button>
                     </div>
                 </div>
-                <button class="see-more">See more →</button>
+<!--                <button class="see-more">See more →</button>-->
+                <a class="see-more" href="#">See more →</a>
             </div>
         </section>
         <section class="email_marketing main_sections">
@@ -74,7 +75,7 @@
                         <button>Automate emails and see exactly how much each message makes<img src="images/icons/plus.svg" alt="plus"></button>
                     </div>
                 </div>
-                <button class="see-more">See more →</button>
+                <a href="#" class="see-more">See more →</a>
             </div>
         </section>
         <section class="digital_products main_sections">
@@ -97,7 +98,7 @@
                         <button>Webinars and workshops<img src="images/icons/plus.svg" alt="plus"></button>
                     </div>
                 </div>
-                <button class="see-more">See more →</button>
+                <a href="#" class="see-more">See more →</a>
             </div>
         </section>
         <section class="blogging main_sections">
@@ -117,7 +118,7 @@
                         <button>Send new blog posts to your newsletter<img src="images/icons/plus.svg" alt="plus"></button>
                     </div>
                 </div>
-                <button class="see-more">See more →</button>
+                <a href="#" class="see-more">See more →</a>
             </div>
         </section>
         <section class="comments main_sections">
@@ -128,7 +129,7 @@
                     <h2 class="card_title">Your website is free forever</h2>
                     <p class="card_description">"Podia makes website building so fun. I feel like I could set up a site in an afternoon, and it would look great. And there’s something to be said for how pretty it is. It’s the best-looking one by far."</p>
                     <p class="client_name card_description">— Joseph D’Amico, Flex Lessons</p>
-                    <button class="start_session main_button">Start making it now</button>
+                    <button class="start_session main_button"><a href="#">Start making it now</a></button>
                     <img class="rating" src="images/icons/partners.svg" alt="rating">
                 </div>
             </div>
@@ -143,24 +144,24 @@
                     <img class="support_profile" src="images/betty_support.png" alt="betty">
                     <h3>Support 7 days a week</h3>
                     <p class="support_info">Talk to a real person to get help with whatever you need.</p>
-                    <button class="learn_more">Learn more →</button>
+                    <a href="#" class="learn_more">Learn more →</a>
                 </div>
                 <div class="support_card">
                     <img class="support_profile" src="images/alex_support.png" alt="alex">
                     <h3>Creator Community</h3>
                     <p class="support_info">Join thousands of others navigating the creator journey just like you.</p>
-                    <button class="learn_more">Learn more →</button>
+                    <a href="#" class="learn_more">Learn more →</a>
                 </div>
                 <div class="support_card">
                     <img class="support_profile" src="images/aduard_support.jpg" alt="eduard">
                     <h3>Help on demand</h3>
                     <p class="support_info">Hundreds of articles and videos any time you need them.</p>
-                    <button class="learn_more">Learn more →</button>
+                    <a href="#" class="learn_more">Learn more →</a>
                 </div>
                 <div class="podia_card">
                     <h2>Get your free Podia account</h2>
                     <p class="support_info podia_card_info">Join the 150,000+ creators who use Podia to create websites, sell digital products, and build online communities.</p>
-                    <button class="sign_up">Sign up free</button>
+                    <button class="sign_up main_button"><a href="#">Sign up free</a></button>
                 </div>
             </div>
         </section>
