add @medias, solved problems with links

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <button class="free_account main_button"><a href="#">Get your free account</a></button>
         </section>
         <section class="statistics main_sections">
-            <img src="images/icons/stadistics_phone.svg" alt="statistic">
+            <img class="statistic_phone" src="images/icons/stadistics_phone.svg" alt="statistic">
+            <img class="statistic_desktop" src="images/icons/stadistic_desktop.svg" alt="statistic">
         </section>
         <section class="ad_website main_sections">
             <img class="example_img" src="images/builder-hero.png" alt="builder-hero">
@@ -128,7 +129,7 @@
                     <p class="little_title">WEBSITE BUILDER</p>
                     <h2 class="card_title">Your website is free forever</h2>
                     <p class="card_description">"Podia makes website building so fun. I feel like I could set up a site in an afternoon, and it would look great. And there’s something to be said for how pretty it is. It’s the best-looking one by far."</p>
-                    <p class="client_name card_description">— Joseph D’Amico, Flex Lessons</p>
+                    <p class="client_name card_description little_text">— Joseph D’Amico, Flex Lessons</p>
                     <button class="start_session main_button"><a href="#">Start making it now</a></button>
                     <img class="rating" src="images/icons/partners.svg" alt="rating">
                 </div>
@@ -191,6 +192,11 @@
                     <div class="option7 options">
                         <button class="footer_button">Social<img class="footer_img_option" src="images/icons/flecha_abajo.svg" alt="flecha_abajo"></button>
                     </div>
+                </div>
+                <div class="terms">
+                    <p class="inc little_text">Podia Labs, Inc. © 2024</p>
+                    <a class="contact_link little_text" href="#">Terms</a>
+                    <a class="contact_link little_text" href="#">Privacy</a>
                 </div>
             </div>
         </section>
