add @medias for cards, fonts and sections

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </section>
         <section class="email_marketing main_sections">
             <img class="example_img" src="images/marketing.png" alt="builder-hero">
-            <div class="text_container_phone">
+            <div class="website_builder">
                 <p class="little_title">EMAIL MARKETING</p>
                 <h2 class="card_title">Beautiful email marketing in the same place as everything else</h2>
                 <p class="card_description">Why figure out how to stitch a whole bunch of different tools together when you can do everything in one place? Podia Email puts your email marketing in the same place as your website, digital products, courses, and community.</p>
@@ -81,7 +81,7 @@
         </section>
         <section class="digital_products main_sections">
             <img class="example_img" src="images/digital_products.png" alt="builder-hero">
-            <div class="text_container_phone">
+            <div class="website_builder">
                 <p class="little_title">DIGITAL PRODUCTS</p>
                 <h2 class="card_title">Sell courses, coaching, ebooks, webinars, workshops—almost anything!</h2>
                 <p class="card_description">Your products are easy to sell and easy for your customers to buy. Podia takes care of hosting products, taking payments, and getting products to your customers.</p>
@@ -104,7 +104,7 @@
         </section>
         <section class="blogging main_sections">
             <img class="example_img" src="images/blogging.jpg" alt="builder-hero">
-            <div class="text_container_phone">
+            <div class="website_builder">
                 <p class="little_title">BLOGGING</p>
                 <h2 class="card_title">Your blog is already connected to your website, products, email list, and customers</h2>
                 <p class="card_description">Make beautiful blog posts – no plugins, headaches, or expensive software required. Podia handles hosting, your newsletter, and all the other tech stuff so you can focus on sharing your work.</p>
