added the last @media, solved problem of specificity and problem with the header

--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
 <body>
     <header>
         <div class="header_settings">
-            <div>
+            <div class="desktop_settings_container">
                 <img class="logo" src="images/podia-logo.png" alt="podia_logo">
+                <p class="main_setting desktop_setting website">Website<img class="row_menu" src="images/icons/flecha_abajo.svg" alt="row"></p>
+                <p class="main_setting desktop_setting email">Email<img class="row_menu" src="images/icons/flecha_abajo.svg" alt="row"></p>
+                <p class="main_setting desktop_setting sell">Sell<img class="row_menu" src="images/icons/flecha_abajo.svg" alt="row"></p>
+                <p class="main_setting desktop_setting pricing">Pricing<img class="row_menu" src="images/icons/flecha_abajo.svg" alt="row"></p>
+                <p class="main_setting desktop_setting resources">Resources<img class="row_menu" src="images/icons/flecha_abajo.svg" alt="row"></p>
             </div>
             <div class="settings_container">
                 <p class="main_setting login"><a href="#">Login</a></p>
-                <p class="main_setting menu">Menu</p><div><img class="row_menu" src="images/icons/flecha_abajo.svg" alt="row"></div>
+                <p class="main_setting menu">Menu</p><div class="row_container"><img class="row_menu" src="images/icons/flecha_abajo.svg" alt="row"></div>
+                <button class="sign_up sign_up_header main_button">Sign up free</button>
             </div>
         </div>
     </header>
@@ -172,25 +178,63 @@
             <div class="text_container_phone footer_container_phone">
                 <div class="ad_website_options footer_options">
                     <div class="option1 options">
-                        <button class="footer_button">Platform<img class="footer_img_option" src="images/icons/flecha_abajo.svg" alt="flecha_abajo"></button>
+                        <p class="option_title option_text">Platform<img class="footer_img_option" src="images/icons/flecha_abajo.svg" alt="flecha_abajo"></p>
+                        <a href="#" class="footer_link">Pricing</a>
+                        <a href="#" class="footer_link">Sign up free</a>
+                        <a href="#" class="footer_link">Community</a>
+                        <a href="#" class="footer_link">Website Builder</a>
+                        <a href="#" class="footer_link">Digital Products</a>
+                        <a href="#" class="footer_link">Email Marketing</a>
                     </div>
                     <div class="option2 options">
-                        <button class="footer_button">Support<img class="footer_img_option" src="images/icons/flecha_abajo.svg" alt="flecha_abajo"></button>
+                        <p class="option_title">Support<img class="footer_img_option" src="images/icons/flecha_abajo.svg" alt="flecha_abajo"></p>
+                        <a href="#" class="footer_link">Contact Us</a>
+                        <a href="#" class="footer_link">Help Center</a>
+                        <a href="#" class="footer_link">Hire a Podia Pro</a>
+                        <a href="#" class="footer_link">Creator Community</a>
+                        <a href="#" class="footer_link">Podia 101</a>
                     </div>
                     <div class="option3 options">
-                        <button class="footer_button">Features<img class="footer_img_option" src="images/icons/flecha_abajo.svg" alt="flecha_abajo"></button>
+                        <p class="option_title">Features<img class="footer_img_option" src="images/icons/flecha_abajo.svg" alt="flecha_abajo"></p>
+                        <a href="#" class="footer_link">Online Courses</a>
+                        <a href="#" class="footer_link">Downloads</a>
+                        <a href="#" class="footer_link">Webinars</a>
+                        <a href="#" class="footer_link">Coaching</a>
+                        <a href="#" class="footer_link">All Features</a>
                     </div>
                     <div class="option4 options">
-                        <button class="footer_button">Compare<img class="footer_img_option" src="images/icons/flecha_abajo.svg" alt="flecha_abajo"></button>
+                        <p class="option_title">Compare<img class="footer_img_option" src="images/icons/flecha_abajo.svg" alt="flecha_abajo"></p>
+                        <a href="#" class="footer_link">Kajabi</a>
+                        <a href="#" class="footer_link">Teachable</a>
+                        <a href="#" class="footer_link">Thinkific</a>
+                        <a href="#" class="footer_link">Patreon</a>
+                        <a href="#" class="footer_link">Gumroad</a>
+                        <a href="#" class="footer_link">Podia Alternatives</a>
                     </div>
                     <div class="option5 options">
-                        <button class="footer_button">Resources<img class="footer_img_option" src="images/icons/flecha_abajo.svg" alt="flecha_abajo"></button>
+                        <p class="option_title">Resources<img class="footer_img_option" src="images/icons/flecha_abajo.svg" alt="flecha_abajo"></p>
+                        <a href="#" class="footer_link">Examples</a>
+                        <a href="#" class="footer_link">Demo</a>
+                        <a href="#" class="footer_link">Creator Stories</a>
+                        <a href="#" class="footer_link">Blog</a>
+                        <a href="#" class="footer_link">Free Tools</a>
+                        <a href="#" class="footer_link">All Resources</a>
                     </div>
                     <div class="option6 options">
-                        <button class="footer_button">Podia<img class="footer_img_option" src="images/icons/flecha_abajo.svg" alt="flecha_abajo"></button>
+                        <p class="option_title">Podia<img class="footer_img_option" src="images/icons/flecha_abajo.svg" alt="flecha_abajo"></p>
+                        <a href="#" class="footer_link">Jobs</a>
+                        <a href="#" class="footer_link">About</a>
+                        <a href="#" class="footer_link">Branding</a>
+                        <a href="#" class="footer_link">Reviews</a>
+                        <a href="#" class="footer_link">Refer-a-creator</a>
+                        <a href="#" class="footer_link">Affiliates</a>
                     </div>
                     <div class="option7 options">
-                        <button class="footer_button">Social<img class="footer_img_option" src="images/icons/flecha_abajo.svg" alt="flecha_abajo"></button>
+                        <p class="option_title">Social<img class="footer_img_option" src="images/icons/flecha_abajo.svg" alt="flecha_abajo"></p>
+                        <a href="#" class="footer_link">Twitter</a>
+                        <a href="#" class="footer_link">Facebook</a>
+                        <a href="#" class="footer_link">Instagram</a>
+                        <a href="#" class="footer_link">YouTube</a>
                     </div>
                 </div>
                 <div class="terms">
